# litres_download

./: .gitignore  LICENSE  README.md  config.py  create_pdf.py  get_images.py  pyproject.toml  requirements.txt
